--- a/Lesson_1/Pandas.ipynb
+++ b/Lesson_1/Pandas.ipynb
@@ -10,13 +10,138 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.3"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python383jvsc74a57bd06ade3e7aac465f864a6e70e76d6ad747bccbdaae49928e31e964f86f87611c7f",
+   "display_name": "Python 3.8.3 64-bit"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "6ade3e7aac465f864a6e70e76d6ad747bccbdaae49928e31e964f86f87611c7f"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
+  {
+   "source": [
+    "# Тема “Работа с данными в Pandas”"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Задание 1\n",
+    "Импортируйте библиотеку Pandas и дайте ей псевдоним pd. Создайте датафрейм authors со\n",
+    "столбцами author_id и author_name, в которых соответственно содержатся данные:\n",
+    "1, 2, 3 и\n",
+    "'Тургенев', 'Чехов', 'Островский'.\n",
+    "\n",
+    "Затем создайте датафрейм book cо столбцами author_id, book_title и price, в которых соответственно\n",
+    "содержатся данные:\n",
+    "\n",
+    "1, 1, 1, 2, 2, 3, 3,\n",
+    "'Отцы и дети', 'Рудин', 'Дворянское гнездо', 'Толстый и тонкий', 'Дама с собачкой', 'Гроза', 'Таланты и\n",
+    "поклонники',\n",
+    "450, 300, 350, 500, 450, 370, 290"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "## Задание 2\n",
+    "Получите датафрейм authors_price, соединив датафреймы authors и books по полю author_id."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "## Задание 3\n",
+    "Создайте датафрейм top5, в котором содержатся строки из authors_price с пятью самыми дорогими\n",
+    "книгами."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "## Задание 4\n",
+    "Создайте датафрейм authors_stat на основе информации из authors_price. В датафрейме authors_stat\n",
+    "должны быть четыре столбца:\n",
+    "\n",
+    "### author_name, min_price, max_price и mean_price,\n",
+    "\n",
+    "в которых должны содержаться соответственно имя автора, минимальная, максимальная и средняя\n",
+    "цена на книги этого автора."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "## Задание 5**\n",
+    "Создайте новый столбец в датафрейме authors_price под названием cover, в нем будут располагаться\n",
+    "данные о том, какая обложка у данной книги - твердая или мягкая. В этот столбец поместите данные\n",
+    "из следующего списка:\n",
+    "\n",
+    "### 'твердая', 'мягкая', 'мягкая', 'твердая', 'твердая', 'мягкая', 'мягкая'.\n",
+    "\n",
+    "Просмотрите документацию по функции pd.pivot_table с помощью вопросительного знака.Для каждого\n",
+    "автора посчитайте суммарную стоимость книг в твердой и мягкой обложке. Используйте для этого\n",
+    "функцию pd.pivot_table. При этом столбцы должны называться \"твердая\" и \"мягкая\", а индексами\n",
+    "должны быть фамилии авторов. Пропущенные значения стоимостей заполните нулями, при\n",
+    "необходимости загрузите библиотеку Numpy.\n",
+    "\n",
+    "Назовите полученный датасет book_info и сохраните его в формат pickle под названием\n",
+    "\"book_info.pkl\". Затем загрузите из этого файла датафрейм и назовите его book_info2. Удостоверьтесь,\n",
+    "что датафреймы book_info и book_info2 идентичны."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
   {
    "cell_type": "code",
    "execution_count": null,
